GSY_Exp/Result/Spectre_Attack_0220-152800/gcc.txt
Spectre_Attack_0220-152800/sleep1.c: In function ‘readMemoryByte’:
Spectre_Attack_0220-152800/sleep1.c:65:23: error: storage size of ‘tim’ isn’t known
   65 |       struct timespec tim, tim2;
      |                       ^~~
Spectre_Attack_0220-152800/sleep1.c:65:28: error: storage size of ‘tim2’ isn’t known
   65 |       struct timespec tim, tim2;
      |                            ^~~~
Spectre_Attack_0220-152800/sleep1.c:68:7: warning: implicit declaration of function ‘nanosleep’ [-Wimplicit-function-declaration]
   68 |       nanosleep(&tim,&tim2);
      |       ^~~~~~~~~
